[gd_scene load_steps=16 format=3 uid="uid://baxg8wjbqklw5"]

[ext_resource type="Script" path="res://scripts/game/campfire.gd" id="1_biipu"]
[ext_resource type="Texture2D" uid="uid://d0s74ireg08os" path="res://assets/campfire.png" id="1_oesh2"]
[ext_resource type="Texture2D" uid="uid://dsey6ufxmgge7" path="res://assets/healthbarUnder.png" id="3_osoas"]
[ext_resource type="Texture2D" uid="uid://bsn5glxg3v41x" path="res://assets/progress_bar.png" id="4_gw6a4"]
[ext_resource type="Script" path="res://components/progress/ProgressBar.gd" id="5_fla3r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1osi2"]
atlas = ExtResource("1_oesh2")
region = Rect2(0, 0, 37, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bksk"]
atlas = ExtResource("1_oesh2")
region = Rect2(37, 0, 37, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cxr2"]
atlas = ExtResource("1_oesh2")
region = Rect2(74, 0, 37, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n2gj"]
atlas = ExtResource("1_oesh2")
region = Rect2(111, 0, 37, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffm6"]
atlas = ExtResource("1_oesh2")
region = Rect2(148, 0, 37, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aadp"]
atlas = ExtResource("1_oesh2")
region = Rect2(185, 0, 37, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_wmdou"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1osi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bksk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cxr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n2gj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aadp")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bkqct"]
radius = 222.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_0o3gs"]
properties/0/path = NodePath(".:controlled_by")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:capture_stage")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6y70t"]
radius = 24.0
height = 110.0

[node name="Campfire" type="StaticBody2D" node_paths=PackedStringArray("spawn_timer", "capture_timer", "reset_timer", "sprite", "effect_area")]
input_pickable = true
script = ExtResource("1_biipu")
npc_scene = "res://scenes/npc.tscn"
spawn_timer = NodePath("SpawnTimer")
capture_timer = NodePath("CaptureTimer")
reset_timer = NodePath("ResetTimer")
sprite = NodePath("AnimatedSprite2D")
effect_area = NodePath("EffectRadius/CollisionShape2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wmdou")
autoplay = "default"
frame_progress = 0.842092

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CaptureTimer" type="Timer" parent="."]

[node name="ResetTimer" type="Timer" parent="."]

[node name="EffectRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectRadius"]
shape = SubResource("CircleShape2D_bkqct")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_0o3gs")

[node name="CapturingProgress" type="TextureProgressBar" parent="." node_paths=PackedStringArray("target")]
offset_left = -32.0
offset_top = -78.0
offset_right = 32.0
offset_bottom = -66.0
texture_under = ExtResource("3_osoas")
texture_progress = ExtResource("4_gw6a4")
tint_progress = Color(1, 0.048175, 0.98862, 1)
script = ExtResource("5_fla3r")
target = NodePath("..")
watched_property = "capture_stage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -53)
shape = SubResource("CapsuleShape2D_6y70t")

[connection signal="body_entered" from="EffectRadius" to="." method="_on_effect_radius_body_entered"]
[connection signal="body_exited" from="EffectRadius" to="." method="_on_effect_radius_body_exited"]
